Afdeed profile image, change first project description

--- a/index.html
+++ b/index.html
@@ -266,12 +266,15 @@ Instructions: Open this file in the canvas to view the full HTML. In this file I
       <div class="profile-wrap" data-aos="fade-up" data-aos-delay="80">
         <!-- placeholder image (replace with Xena's image later) -->
         <div class="profile" id="profile-anim">
-          <img src="data:image/svg+xml;utf8,
+          <!-- <img src="data:image/svg+xml;utf8,
             <svg xmlns='http://www.w3.org/2000/svg' width='400' height='400'>
               <rect width='100%' height='100%' fill='%23efe6dd'/>
               <text x='50%' y='50%' font-size='48' font-family='Poppins,Arial' text-anchor='middle' alignment-baseline='central' fill='%23b89f82'>X</text>
             </svg>"
-            alt="Profile picture placeholder — Xena Getmanovich">
+            alt="Profile picture placeholder — Xena Getmanovich"> -->
+
+             <img src="My-Picture.jpg"
+            alt="Profile picture placeholder — Xena Getmanovich">          
         </div>
       </div>
 
@@ -298,16 +301,19 @@ Instructions: Open this file in the canvas to view the full HTML. In this file I
 
       <!-- Project A (top-level) -->
       <article class="project" data-aos="fade-up" data-aos-delay="80" data-project-id="proj-a">
-        <div class="project-title">Interactive Graph Visualizer</div>
+        <div class="project-title"> <link href="https://xenagetmanovich.github.io/SortingAlgorithms/">
+          Sorting Algorithms Visualizer </link></div>
+          
+
         <div class="tags" aria-hidden="true">
           <span class="tag-pill">JavaScript</span>
           <span class="tag-pill">D3</span>
-          <span class="tag-pill">Graph Theory</span>
+          <span class="tag-pill">Algorithms</span>
           <span class="tag-pill">Medium</span>
         </div>
         <p class="project-desc">
-          A tool to visualize d-regular graphs and their spectral properties. Interactive layout, eigenvalue plotting,
-          and adjacency matrix view for study and teaching.
+          A tool to visualize sorting algoirthms, a good tool for usually learning how sorting works. Can compare different algorithms with each other 
+          view for study and teaching.
         </p>
 
         <div class="media-wrap" data-media-anim>
